--- a/crypto_sign/raccoon-128/m4/gen_table/genRaccConstant.ipynb
+++ b/crypto_sign/raccoon-128/m4/gen_table/genRaccConstant.ipynb
@@ -101,7 +101,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.5 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -122,12 +122,7 @@
     "hash": "5edc29c2ed010d6458d71a83433b383a96a8cbd3efe8531bc90c4b8a5b8bcec9"
    }
   },
-  "orig_nbformat": 2,
-  "vscode": {
-   "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
-   }
-  }
+  "orig_nbformat": 2
  },
  "nbformat": 4,
  "nbformat_minor": 2
